--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -13,11 +13,11 @@
             <!--h1 id="pagetitle">Prototype ADSLabs/VAO Semantic Browser</h1><br/-->
             <div>
                 <!--span class="tab {{isitchosensearch}}"><a href="/explorer/search">Search</a></span-->
-                <span class="tab {{isitchosenpublications}}"><a href="/explorer/publications">Publications</a></span>
-                <span class="tab {{isitchosenobjects}}"><a href="/explorer/objects">Objects</a></span>
-                <span class="tab {{isitchosendatasets}}"><a href="/explorer/datasets">Datasets</a></span>
-                <span class="tab {{isithosenproposals}}"><a href="/explorer/proposals">Proposals</a></span>
-				<span class="tab saved {{isitchosensaved}}"><a href="/explorer/saved">Saved</a></span>
+                <span class="tab {{isitchosenpublications}}"><a href="{{ siteprefix }}/explorer/publications">Publications</a></span>
+                <span class="tab {{isitchosenobjects}}"><a href="{{ siteprefix }}/explorer/objects">Objects</a></span>
+                <span class="tab {{isitchosendatasets}}"><a href="{{ siteprefix }}/explorer/datasets">Datasets</a></span>
+                <span class="tab {{isithosenproposals}}"><a href="{{ siteprefix }}/explorer/proposals">Proposals</a></span>
+				<span class="tab saved {{isitchosensaved}}"><a href="{{ siteprefix }}/explorer/saved">Saved</a></span>
             </div>
   		<!--h2>With RDF, Faceting, Objects, Data, and SOLR, Oh My!</h2--> 
             </td><td valign="top" align="left">
@@ -27,19 +27,19 @@
 	 		
             <!--/td><td valign="bottom"-->
             	<a href="http://www.usvao.org/"> 
-                        <img src="/images/vao.png" width="66" height="33" alt="VAO" /> 
+                        <img src="{{ staticprefix }}/images/vao.png" width="66" height="33" alt="VAO" /> 
                 </a>
 			
 				<a href="http://labs.adsabs.harvard.edu/"> 
-                        <img src="/images/ads_small.gif" width="35" height="31" alt="ADS" /> 
+                        <img src="{{ staticprefix }}/images/ads_small.gif" width="35" height="31" alt="ADS" /> 
                 </a>
 			
             	<a href="http://www.nasa.gov/"> 
-                        <img src="/images/NasaPNG.png" width="35" height="35" alt="NASA" /> 
+                        <img src="{{ staticprefix }}/images/NasaPNG.png" width="35" height="35" alt="NASA" /> 
                 </a>
 			
 			    <a href="http://www.nsf.gov/"> 
-                        <img src="/images/nsf1.gif" width="35" height="35" alt="[NSF]" /> 
+                        <img src="{{ staticprefix }}/images/nsf1.gif" width="35" height="35" alt="[NSF]" /> 
                 </a>
             </td></tr> 
             </table> 
