--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -1,41 +1,41 @@
 <head> 
   <title>{{pagetype}}</title> 
-  <link rel="stylesheet" type="text/css" href="/css/semflow.css" media="screen" /> 
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen" /> 
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
-<script type="text/javascript" src="/ext/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
-  <script type="text/javascript" src="/js/semflow.js"></script> 
-  <script type="text/javascript" src="/ajax-solr/core/Core.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/AbstractManager.js"></script>
-  <script type="text/javascript" src="/ajax-solr/managers/Manager.jquery.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/Parameter.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/ParameterStore.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/ParameterHashStore.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/AbstractWidget.js"></script> 
-  <script type="text/javascript" src="/widgets/ResultWidget.2.0.js"></script> 
-  <script type="text/javascript" src="/js/reuters.theme.js"></script>
-  <script type="text/javascript" src="/ajax-solr/widgets/jquery/PagerWidget.js"></script>
-  <script type="text/javascript" src="/ajax-solr/core/AbstractFacetWidget.js"></script>
-  <script type="text/javascript" src="/widgets/TagcloudWidget.js"></script>
-  <script type="text/javascript" src="/widgets/CurrentSearchWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractManager.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/managers/Manager.jquery.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Parameter.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterStore.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/ParameterHashStore.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractWidget.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/ResultWidget.2.0.js"></script> 
+  <script type="text/javascript" src="{{ staticprefix }}/js/reuters.theme.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/widgets/jquery/PagerWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/AbstractFacetWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/TagcloudWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/CurrentSearchWidget.js"></script>
   <!--script type="text/javascript" src="widgets/TextWidget.js"></script-->
 
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script-->
-<script type="text/javascript" src="/ext/jquery-ui-1.8.1.custom.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="/ext/smoothness/jquery-ui.css" media="screen" />
-  <link rel="stylesheet" type="text/css" href="/ext/jquery.autocomplete.css" media="screen" />
-  <script type="text/javascript" src="/ext/jquery.autocomplete.js"></script>
-  <script type="text/javascript" src="/widgets/AutocompleteWidget.js"></script>
-  <script type="text/javascript" src="/widgets/YearWidgetTwo.js"></script>
-  <script type="text/javascript" src="/widgets/DualSlider.js"></script>
-  <script type="text/javascript" src="/js/date.js"></script>
-  <script type="text/javascript" src="/js/time.js"></script>
-  <script type="text/javascript" src="/js/underscore-min.js"></script>
-  <script type="text/javascript" src="/widgets/DateRanger.js"></script>
+<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-ui-1.8.1.custom.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/smoothness/jquery-ui.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/jquery.autocomplete.css" media="screen" />
+  <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.autocomplete.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/AutocompleteWidget.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/YearWidgetTwo.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/DualSlider.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/date.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/time.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/widgets/DateRanger.js"></script>
   <!--link rel="stylesheet" type="text/css" href="ext/colorbox.css" media="screen" /> 
   <script type="text/javascript" src="ext/jquery.colorbox.js"></script-->
-<script type="text/javascript" src="/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<link rel="stylesheet" href="/ext/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+<script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" href="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
   <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
 
 
