Fix up the links/list to obsids in the paper description.
The code is now slightly better and uses CSS styling to differentiate th
e different missions as well as to remove the text justification in this
 area.

I have moved the "all data" link into the "per mission" area; th
at is you can get all the data for Chandra. It also only occurs if there
 are multiple obsess.

Links for other missions (and the equivalent of "
all") are still not implemented.

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -261,3 +261,15 @@ font-size: 140%;
 .tagcloud_size_10 {
 font-size: 145%;
 }
+
+/* How should the mission data be styled? */
+
+div.missiondataarea {
+    padding-left: 2em;
+    text-align: left; /* override parent justify setting */
+}
+
+span.missionname {
+    position: relative;
+    left: -1em;
+}
