Remove an incorrect /span tag from HTML

--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -22,7 +22,8 @@
   		<!--h2>With RDF, Faceting, Objects, Data, and SOLR, Oh My!</h2--> 
             </td><td valign="top" align="left">
 
-	 		<span valign="top"><a id="loginhref">login</a></span>&nbsp;|&nbsp;<a id="logouthref">logout</a></span><br/><br/>
+	 		<span valign="top"><a
+	 		id="loginhref">login</a>&nbsp;|&nbsp;<a id="logouthref">logout</a></span><br/><br/>
 
 	 		
             <!--/td><td valign="bottom"-->
