Remove paper type facet; goes with https://github.com/DougBurke/semflow/commit/d6af8bb1332446370da4546eed6c974a82ccc38d

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -18,9 +18,11 @@
   <h2>Missions</h2> 
   <div class="tagcloud" id="missions"></div>
 
+  <!-- Taken out by Doug
   <h2>Paper Types</h2> 
   <div class="tagcloud" id="papertype"></div>
-  
+  -->
+
   <h2>Year of Publication</h2>
   <div id="pubyear"></div>
   <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;" />
