Saved publications now also store bibcode and title to redis; this info is used to create a more-friendly search page
When a paper is saved we now also save the title and bibcode along with
the document id. This extra information is added to "global" redis hash
arrays (rather than per user) since this was easier and it saves memory
(at the potential expense of query time) for a large multi-user system
(although this is not guaranteed).  This is really a test to see how
this works/looks as we may want to display different information.  Note
that saved searches now use the bibcode rather than document id when
restoring the search; this should have the same semantics (assuming that
bibcode is as unique as the document id) but is more user friendly.

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -11,7 +11,12 @@
     <h1>Saved Publications</h1><br/>
 	<ul>
 	{{#savedpubs}}
-	<li><a href="/semantic2/alpha/explorer/publications#fq=id%3A{{.}}&q=*%3A*">{{.}}</a></li>
+	<li>
+	  <!-- <a href="/semantic2/alpha/explorer/publications#fq=id%3A{{.}}&q=*%3A*"> -->
+	  <a href="/semantic2/alpha/explorer/publications#fq=bibcode%3A{{bibcode}}&q=*%3A*">
+	    {{title}} ({{bibcode}})
+	  </a>
+	</li>
 	{{/savedpubs}}
 	</ul>
 
