Initial support for deleting saved publications.
Saved searches can now be deleted but only from the main page; not from
the search page as I wasn't sure how to insert the necessary post logic
into a mustache template.  The 'saved' icon/link now gets replaced by a
'delete' one.  The text/links on the saved search page now handle the
case when some information on the saved publication is missing. This
should only be necessary during development, but may be useful in the
general case.

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -52,6 +52,16 @@ a.save {
     background: #FAF8CC;
     border-radius: 10px;
 }
+
+a.delete {
+    color: #333;
+    border: 1px solid;
+    padding-left: 5px;
+    padding-right: 5px;
+    background: grey; /* #FAF8CC; */
+    border-radius: 10px;
+}
+
 a:hover {
   color: #000;
   text-decoration: underline;
