Initial attempt at providing a more human-readable search term
At present all we do is decode the search URI and re-construct a
human-readable version of it, each time the search term is needed to be
displayed. This could be done when the search is created, to save time,
but leave that optimization for later.  No delete is provided at this
time.

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -3,8 +3,7 @@
     <h1>Saved Searches</h1><br/>
 	<ul>
 	{{#savedsearches}}
-	<!--Fullpath below works around mustache not getting parent scopes. Choose other mustache compatible templating library later-->
-	<li><a href="/semantic2/alpha/explorer/publications#{{.}}">{{.}}</a></li>
+	<li><a href="/semantic2/alpha/explorer/publications#{{searchuri}}">{{searchtext}}</a></li>
 	{{/savedsearches}}
 	</ul>
 	<br/>
