--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -3,7 +3,10 @@
     <h1>Saved Searches</h1><br/>
 	<ul>
 	{{#savedsearches}}
-	<li><a href="/semantic2/alpha/explorer/publications#{{searchuri}}">{{searchtext}}</a></li>
+	  <li>
+	  <a href="/semantic2/alpha/explorer/publications#{{searchuri}}">{{searchtext}}</a>
+	  [Should be a 'Remove' link here]
+	  </li>
 	{{/savedsearches}}
 	</ul>
 	<br/>
