triple braces for html on saved template and server at 3002

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -16,7 +16,7 @@
 	{{#savedpubs}}
 	<li>
 	  {{linkpre}}
-	  <a href="/semantic2/alpha/explorer/publications#fq={{linkuri}}&q=*%3A*">{{linktext}}</a>
+	  <a href="/semantic2/alpha/explorer/publications#fq={{linkuri}}&q=*%3A*">{{{linktext}}}</a>
 	  [Remove link]
 	</li>
 	{{/savedpubs}}
