Initial support for a 'delete search' link on the saved searches page (no delete pub yet)
This is a bit ugly: we create some javascript code in the template that
adds the necessary click handlers to perform the post action to delete a
search, and then mustache to set up the necessary calls to these
routines for each search.   When a search is deleted the relevant link
is hidden rather than re-generating the page since it is less work for
the server and client and is visually less distracting to the user (e.g.
the saved times won't get updated as they would on a reload).  Delete
pub links will follow next (same technique).

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -3,10 +3,10 @@
     <h1>Saved Searches</h1><br/>
 	<ul>
 	{{#savedsearches}}
-	  <li>
+	  <li id="search-{{searchctr}}">
 	    {{searchpre}}
 	    <a href="/semantic2/alpha/explorer/publications#{{searchuri}}">{{searchtext}}</a>
-	    [Remove link]
+	    [<a href="#" id="del-search-{{searchctr}}">Delete</a>]
 	  </li>
 	{{/savedsearches}}
 	</ul>
@@ -22,13 +22,31 @@
 	{{/savedpubs}}
 	</ul>
 
+	<!-- I assume this is a sensible time to add the handlers -->
+	<script type='text/javascript'>
+// relying on SITEPREFIX being in scope
+function addDeleteSearchHandler(ctr, searchid) {
+  $('#del-search-'+ctr).click(function() {
+    $.post(SITEPREFIX+'/deletesearch',
+	JSON.stringify({'savedsearch':searchid}),
+	function (data) {
+	  if (data['success']==='defined') {
+	    // Could force a page reload but this is less
+	    // work and probably a nicer user experience.
+	    $('#search-'+ctr).hide();
+	  }
+	});
+    return false;	
+ });
+}
 
-  <!--div id="result"> Using SOLR to generate collections might be a great way to go. Also use
-hashes rather than sets for saved searches so we can name them!
-    <div id="navigation"> 
-      <ul id="pager"></ul> 
-      <div id="pager-header"></div> 
-    </div> 
-    <div id="docs"></div> 
-  </div-->    
+function addDeleteHandlers() {
+{{#savedsearches}}
+  addDeleteSearchHandler('{{searchctr}}', '{{{searchuri}}}');
+{{/savedsearches}}
+}
+
+addDeleteHandlers();
+
+	</script>
 </div>
