Clean up text on search page when not logged in

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -1,12 +1,10 @@
 <div class="full"> 
 
   {{#notloggedin}}
+  <!-- TODO: make 'log in' be a link. -->
   <div>
-    Saving of searches and publications requires you to
-    log in.
-    TODO: make "log in" be a link, or have the Saved tab be
-    hidden unless you are logged in.
-  </div>
+    Please log in to see your saved items.
+ </div>
   {{/notloggedin}}
 
   {{^notloggedin}}
