Only submit delete if an item was actually selected.
Ideally the submit action would only be possible when one or more items
were selected, but this is a simple and cheap method to avoid excessive
server load and screen updating

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -60,16 +60,17 @@ function changeAllButtons(form, newstate) {
 
 function submitDelete(path, idname) {
     return function() {
-     var data = [];
+      var data = [];
       $(this).find('input[type=checkbox]').each(function() {
         if (this.checked) { data.push(this.value); }
       });
+      if (data.length == 0) { return false; }
       var map = { "action": "delete" };
       map[idname] = data;
-     $.post(SITEPREFIX+path, JSON.stringify(map), function(resp) {
+      $.post(SITEPREFIX+path, JSON.stringify(map), function(resp) {
         // reload on success or error
         window.location.reload();
-     });
+      });
     };
 }
 
