Added a 'save pubs to myADS' option on the saved publication page
This has not been properly tested.   The myADS and bibtex support both
add in specialized handlers for parodying information; ideally we'd
follow labs.adsabs and have a generic proxy mechanism, but that is left
for later.

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -315,7 +315,7 @@ div.saved-items div {
 }
 
 /* Not convinced this is useful but try for now */
-div.saved-items div:nth-child(odd) {
+div.saved-items div.saveditem:nth-child(odd) {
     background: #EDEBEC;
 }
 
