Added an alert to point out that saving to myADS doesn't work just yet.

--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -90,9 +90,12 @@ function saveToMyADS(form) {
     if (this.checked) { data.push(this.value) };
   });
  if (data.length == 0) { return false; }
+    alert("Saving publications to your myADS library is not implemented.");
+    /***
   $.fancybox.showActivity();
  $.post(SITEPREFIX+'/savepubstomyads', JSON.stringify({'docids':data}),
   function(resp) { $.fancybox('<pre>'+resp+'</pre>'); });
+    ***/ 
  return false;
 }
     
