--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -34,9 +34,13 @@
   <script type="text/javascript" src="{{ staticprefix }}/widgets/DateRanger.js"></script>
   <!--link rel="stylesheet" type="text/css" href="ext/colorbox.css" media="screen" /> 
   <script type="text/javascript" src="ext/jquery.colorbox.js"></script-->
-<script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<link rel="stylesheet" href="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-  <!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
+  <script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+  <link rel="stylesheet" href="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+
+  <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.tablesorter/jquery.tablesorter.min.js"></script>
+  <link rel="stylesheet" href="{{ staticprefix }}/ext/jquery.tablesorter/themes/blue/style.css" type="text/css" media="print, projection, screen" />
+
+<!--script type="text/javascript" src="../../Projects/ajax-solr/helpers/jquery/ajaxsolr.theme.js"></script-->
 
 
 </head>
