Exposure time, ra and dec sliders now display the limits based on the current selection
The range widgets need refactoring since there's replicated code.  These
widgets behave as the pub. year does, in that they show the actual
limits rather than the range explicitly given by the user. As there can
be multiple exp time, ra and dec values per paper, this can lead to
confusion - e.g. a ra range of 10 to 50 can end up going back to 0 to
360 if the papers that are selected also have objects outside this
range. Likely to change this but it is a potentially-confusing UI.  The
exp time widget label has been changed to say sec rather than ksec since
this is what it uses; need to scale the value from the database.

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -70,8 +70,9 @@
   <div id="obsvtime"></div>
   <span type="text" id="obsvtime_amount" style="border:0; color:#f6931f; font-weight:bold;"></span>
   
-  <h2>Exposure Time (ksec)</h2>
-  <div id="exptime"></div>
+  <!-- <h2>Exposure Time (ksec)</h2> -->
+  <h2>Exposure Time (sec)</h2>
+ <div id="exptime"></div>
   <input type="text" id="exptime_amount" style="border:0; color:#f6931f; font-weight:bold;" />
   
   <h2>Observation Ids</h2> 
