More alignment between YearWidgetTwo and DualSlider

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -25,7 +25,7 @@
 
   <h2>Year of Publication</h2>
   <div id="pubyear"></div>
-  <input type="text" id="amount" style="border:0; color:#f6931f; font-weight:bold;" />
+  <input type="text" id="pubyear_amount" style="border:0; color:#f6931f; font-weight:bold;" />
   
 <div class="clear"></div> 
 <br/>
